test/asm/double-purge.err
error: Undefined symbol 'n' was already purged
    at double-purge.asm(3)
Assembly aborted with 1 error!
